# simple-ray-tracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  scene.ppm  test2.ppm
mapreduce/: command.txt  simple_ray_tracer_reducer.py
mapreduce/convert_to_image/: CMakeLists.txt  main.cpp
mapreduce/cplusplus_test/: .project
mapreduce/cplusplus_test/src/cplusplus_test/: Main.java
mapreduce/png_generator/: png_generator.py
mapreduce/png_reducer/: CMakeLists.txt  main.cpp
mapreduce/raytracing/: .project  pom.xml
mapreduce/raytracing/src/main/java/com/ikps/hadoop/raytracing/: App.java
mapreduce/raytracing/src/test/java/com/ikps/hadoop/raytracing/: AppTest.java
mapreduce/render_input_test/: scene.json  settings.json  simple_ray_tracer_reducer.py  testInput.txt
mapreduce/untitled/src/: RowPairWritable.java  SceneFileInputFormat.java  SceneRecordReader.java  SceneSplit.java  SimpleRaytracerHadoop.java
src/: aabb.cpp  plane.cpp  raytracer.h  scene.cpp  scene.h  sphere.cpp  triangle.cpp  utils.cpp  utils.h
